# react-native-picture-selector

./: .gitignore  .npmignore  NitroPictureSelector.podspec  README.md  nitro.json  nitrogen.config.json  package-lock.json  package.json  react-native-picture-selector-1.0.1.tgz  tsconfig.json
.claude/: settings.local.json
android/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/kotlin/com/margelo/pictureselector/: GlideEngine.kt  HybridPictureSelector.kt  LubanCompressEngine.kt  MediaAssetMapper.kt  NitroPictureSelectorPackage.kt  PictureSelectorFileProvider.kt  PictureSelectorOptionsMapper.kt  UCropEngine.kt
example/: App.tsx
ios/: HybridPictureSelector.swift  NitroPictureSelector.podspec  NitroPictureSelectorOnLoad.mm
lib/commonjs/: PictureSelector.js  PictureSelector.js.map  index.js  index.js.map  types.js  types.js.map  usePictureSelector.js  usePictureSelector.js.map
lib/commonjs/specs/: PictureSelector.nitro.js  PictureSelector.nitro.js.map
lib/module/: PictureSelector.js  PictureSelector.js.map  index.js  index.js.map  types.js  types.js.map  usePictureSelector.js  usePictureSelector.js.map
lib/module/specs/: PictureSelector.nitro.js  PictureSelector.nitro.js.map
lib/typescript/: PictureSelector.d.ts  PictureSelector.d.ts.map  index.d.ts  index.d.ts.map  types.d.ts  types.d.ts.map  usePictureSelector.d.ts  usePictureSelector.d.ts.map
lib/typescript/specs/: PictureSelector.nitro.d.ts  PictureSelector.nitro.d.ts.map
src/: PictureSelector.ts  index.ts  types.ts  usePictureSelector.ts
src/specs/: PictureSelector.nitro.ts
